[package]
name = "ci"
version = "0.2.0"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.authors]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[dependencies]
cargo_toml = "0.20.4"

[dependencies.clap]
workspace = true

[dependencies.toml]
workspace = true
