[package]
name = "ci"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
toml.workspace = true
toml_edit = { version = "0.22.21", features = ["serde"] }
