[package]
name = "gauntlet"
version = "0.6.0"
description = "Testing of parse trees and ASTs within the `wdl` family of crates"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.codespan-reporting]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.faster-hex]
workspace = true

[dependencies.git2]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_with]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.wdl-lint]
version = "0.7.0"
path = "../wdl-lint"
features = ["codespan"]
