[package]
name = "wdl-ast"
version = "0.8.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "An abstract syntax tree for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-ast"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stjude-rust-labs/wdl"

[dependencies]
rowan = "0.15.15"
url = "2.5.2"
urlencoding = "2.1.3"

[dependencies.wdl-grammar]
version = "0.9.0"
path = "../wdl-grammar"

[dev-dependencies]
approx = "0.5.1"
codespan-reporting = "0.11.1"
colored = "2.1.0"
pretty_assertions = "1.4.0"
rayon = "1.10.0"

[features]
codespan = ["wdl-grammar/codespan"]

[lib]
path = "src/lib.rs"
name = "wdl_ast"
edition = "2021"
crate-type = ["lib"]
required-features = []

[[test]]
path = "tests/validation.rs"
name = "validation"
harness = false
required-features = ["codespan"]
