[package]
name = "wdl-ast"
version = "0.8.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "An abstract syntax tree for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-ast"
repository = "https://github.com/stjude-rust-labs/wdl"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[dependencies.rowan]
workspace = true

[dependencies.url]
workspace = true

[dependencies.urlencoding]
workspace = true

[dependencies.wdl-grammar]
version = "0.9.0"
path = "../wdl-grammar"

[dev-dependencies.approx]
workspace = true

[dev-dependencies.codespan-reporting]
workspace = true

[dev-dependencies.colored]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.rayon]
workspace = true

[features]
codespan = ["wdl-grammar/codespan"]

[[test]]
name = "validation"
harness = false
required-features = ["codespan"]
