[package]
name = "wdl-ast"
version = "0.13.0"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "An abstract syntax tree for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
repository = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-ast"

[dependencies]
codespan-reporting = { workspace = true, optional = true }
itertools = { workspace = true }
logos = { workspace = true }
macropol = "0.1.3"
paste = "1.0.15"
rowan = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
codespan-reporting = { workspace = true }
colored = { workspace = true }
pretty_assertions = { workspace = true }
rayon = { workspace = true }

[features]
codespan = ["dep:codespan-reporting"]

[lints]
workspace = true

[[test]]
name = "parsing"
required-features = ["codespan"]
harness = false
