[package]
name = "wdl-core"
description = "Common functionality used across the `wdl` family of crates"
license.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
pest = { workspace = true }
serde = { workspace = true }
to_snake_case = "0.1.1"