[package]
name = "wdl-grammar"
version = "0.9.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "A parse tree for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-grammar"
repository = "https://github.com/stjude-rust-labs/wdl"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[dependencies.codespan-reporting]
optional = true
workspace = true

[dependencies.logos]
workspace = true

[dependencies.rowan]
workspace = true

[dev-dependencies.codespan-reporting]
workspace = true

[dev-dependencies.colored]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.rayon]
workspace = true

[features]
codespan = ["dep:codespan-reporting"]

[[test]]
name = "parsing"
harness = false
required-features = ["codespan"]
