[package]
name = "wdl-lint"
version = "0.7.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["The Rust WDL project developers"]
description = "Lint rules for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-lint"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stjude-rust-labs/wdl"

[dependencies]
convert_case = "0.6.0"
rowan = "0.15.15"

[dependencies.indexmap]
version = "2.2.6"
features = ["serde"]

[dependencies.wdl-ast]
version = "0.8.0"
path = "../wdl-ast"

[dev-dependencies]
codespan-reporting = "0.11.1"
colored = "2.1.0"
pretty_assertions = "1.4.0"
rayon = "1.10.0"

[features]
codespan = ["wdl-ast/codespan"]

[lib]
path = "src/lib.rs"
name = "wdl_lint"
edition = "2021"
crate-type = ["lib"]
required-features = []

[[test]]
path = "tests/lints.rs"
name = "lints"
harness = false
required-features = ["codespan"]
