[package]
name = "wdl-lint"
version = "0.7.0"
description = "Lint rules for Workflow Description Language (WDL) documents"
documentation = "https://docs.rs/wdl-lint"
readme = "../README.md"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.authors]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[dependencies.convert_case]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.rowan]
workspace = true

[dependencies.wdl-ast]
version = "0.8.0"
path = "../wdl-ast"

[dev-dependencies.codespan-reporting]
workspace = true

[dev-dependencies.colored]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.rayon]
workspace = true

[features]
codespan = ["wdl-ast/codespan"]

[[test]]
name = "lints"
harness = false
required-features = ["codespan"]
