[package]
name = "wdl"
version = "0.9.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "Lexing, parsing, validation, and linting for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stjude-rust-labs/wdl"

[package.metadata.docs.rs]
all-features = true

[dependencies.anyhow]
version = "1.0.86"
optional = true

[dependencies.clap]
version = "4.5.7"
features = ["derive"]
optional = true

[dependencies.codespan-reporting]
version = "0.11.1"
optional = true

[dependencies.colored]
version = "2.1.0"
optional = true

[dependencies.indicatif]
version = "0.17.8"
optional = true

[dependencies.tokio]
version = "1.38.0"
features = ["full"]
optional = true

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
optional = true

[dependencies.wdl-analysis]
version = "0.4.0"
path = "../wdl-analysis"
optional = true

[dependencies.wdl-ast]
version = "0.8.0"
path = "../wdl-ast"
optional = true

[dependencies.wdl-grammar]
version = "0.9.0"
path = "../wdl-grammar"
optional = true

[dependencies.wdl-lint]
version = "0.7.0"
path = "../wdl-lint"
optional = true

[dependencies.wdl-lsp]
version = "0.4.0"
path = "../wdl-lsp"
optional = true

[dev-dependencies]
anyhow = "1.0.86"
codespan-reporting = "0.11.1"

[dev-dependencies.clap]
version = "4.5.7"
features = ["derive"]

[features]
analysis = ["dep:wdl-analysis"]
ast = ["dep:wdl-ast"]
cli = ["analysis", "codespan", "lint", "dep:clap", "dep:tracing-subscriber", "dep:anyhow", "dep:colored", "dep:indicatif", "dep:tokio"]
codespan = ["ast", "wdl-ast/codespan", "dep:codespan-reporting"]
default = ["analysis", "ast", "grammar", "lint"]
grammar = ["dep:wdl-grammar"]
lint = ["dep:wdl-lint"]
lsp = ["dep:wdl-lsp"]

[lib]
path = "src/lib.rs"
name = "wdl"
edition = "2021"
crate-type = ["lib"]
required-features = []

[[bin]]
path = "src/bin/wdl.rs"
name = "wdl"
required-features = ["cli"]

[[example]]
path = "examples/explore.rs"
name = "explore"
required-features = ["codespan"]

[[example]]
path = "examples/parse.rs"
name = "parse"
required-features = ["codespan"]
