[package]
name = "wdl"
version = "0.9.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "Lexing, parsing, validation, and linting for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl"
readme = "../README.md"
repository = "https://github.com/stjude-rust-labs/wdl"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies.anyhow]
optional = true
workspace = true

[dependencies.clap]
optional = true
workspace = true

[dependencies.codespan-reporting]
optional = true
workspace = true

[dependencies.colored]
optional = true
workspace = true

[dependencies.indicatif]
optional = true
workspace = true

[dependencies.tokio]
optional = true
workspace = true

[dependencies.tracing-subscriber]
optional = true
workspace = true

[dependencies.wdl-analysis]
version = "0.4.0"
path = "../wdl-analysis"
optional = true

[dependencies.wdl-ast]
version = "0.8.0"
path = "../wdl-ast"
optional = true

[dependencies.wdl-grammar]
version = "0.9.0"
path = "../wdl-grammar"
optional = true

[dependencies.wdl-lint]
version = "0.7.0"
path = "../wdl-lint"
optional = true

[dependencies.wdl-lsp]
version = "0.4.0"
path = "../wdl-lsp"
optional = true

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.clap]
workspace = true

[dev-dependencies.codespan-reporting]
workspace = true

[features]
analysis = ["dep:wdl-analysis"]
ast = ["dep:wdl-ast"]
cli = ["analysis", "codespan", "lint", "dep:clap", "dep:tracing-subscriber", "dep:anyhow", "dep:colored", "dep:indicatif", "dep:tokio"]
codespan = ["ast", "wdl-ast/codespan", "dep:codespan-reporting"]
default = ["analysis", "ast", "grammar", "lint"]
grammar = ["dep:wdl-grammar"]
lint = ["dep:wdl-lint"]
lsp = ["dep:wdl-lsp"]

[[bin]]
name = "wdl"
required-features = ["cli"]

[[example]]
name = "explore"
required-features = ["codespan"]

[[example]]
name = "parse"
required-features = ["codespan"]
